# nanonet

./: .env.example  .gitignore  .local.env  ACCESSIBILITY.md  AUTH_FIX_SUMMARY.md  AUTH_PERSISTENCE_FIX_INDEX.md  CHANGES_SUMMARY.txt  DEPLOYMENT_NOTES.md  FIX_COMPLETE.md  Makefile  NanoNet_Referans.md  NanoNet_Referans.txt  PHASE4-VERIFICATION.md  QUICK_REFERENCE.md  README.md  README_AUTH_FIX.md  TESTING_CHECKLIST.md  agent-setup.ps1  agent-setup.sh  biome.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  lint.sh  package-lock.json  package.json  security-standards.md  ╭───────────────────────────────────────
agent/: Cargo.toml  Dockerfile  install.sh
agent/.cargo/: config.toml
agent/src/: agent_health.rs  buffer.rs  commands.rs  config.rs  error.rs  health.rs  main.rs  metrics.rs  ws.rs
backend/: .air.toml  Dockerfile  Dockerfile.dev  entrypoint.sh  go.mod  go.sum
backend/cmd/: main.go
backend/migrations/: 0001_create_users.up.sql  0002_create_services.up.sql  0003_create_metrics_hypertable.down.sql  0003_create_metrics_hypertable.up.sql  0004_create_alerts.up.sql  0005_create_ai_insights.down.sql  (+13 more)
deliverables/: NanoNet_Proje_Raporu_v3.docx  NanoNet_Yol_Haritasi.docx  Rapor.docx  nanonet-api.yaml
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
main_ui_system_example/: README.md  index.html
mock-service/: .gitignore  Dockerfile  README.md  go.mod  main.go
nginx/: README.md  nginx.prod.conf
(+203 files in other folders)
