[package]
name = "nanonet-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
